# alsaplusplus

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
examples/: set_volume.cpp  wav_player.cpp
include/: common.hpp  mixer.hpp  pcm.hpp
include/alsaplusplus/: common.hpp  error.hpp  mixer.hpp  pcm.hpp  pcm.tpp
src/: error.cpp  mixer.cpp  pcm.cpp
